<resources>
    <string name="app_name">Xuất mã vạch</string>
    <string name="input_data">Nhập dữ liệu</string>
    <string name="from">Từ</string>
    <string name="to">Đến</string>
    <string name="next">Kế tiếp</string>
    <string name="export">Kết xuất</string>
    <string name="choose_logo">Chọn logo</string>
    <string name="choose_from_file">Chọn từ file</string>
    <string name="loading">Vui lòng chờ</string>
    <string name="input_min_wrong">\"Đến\" phải lớn hơn \"Từ\".</string>
    <string name="input_empty">Vui lòng nhập đầy đủ.</string>
    <string name="dialog_confirm">Tôi đã hiểu</string>
    <string name="dialog_choose_again">Chọn lại</string>
    <string name="dialog_error_title">Lỗi !</string>
    <string name="warning">Cảnh báo !</string>
    <string name="no_logo">Bạn có chắc không sử dụng logo chứ?</string>
    <string name="configure_logo_message">Vui lòng chờ !\nĐang cấu hình logo.</string>
    <string name="exporting">Đang xuất : $1/$2</string>
    <string name="exporting_fg">Đang khởi tạo bản phủ nền</string>
    <string name="export_success">Xuất thành công, vui lòng kiểm tra thư mục : </string>
    <string name="export_fail">Xuất không thành công, vui lòng xuất lại !</string>
    <string name="success">Thành công !</string>
    <string name="fg_question">Khởi tạo phủ nền logo</string>
    <string name="create_specialize">Khởi tạo số chỉ định</string>
    <string name="create_new">Khởi tạo mới</string>
    <string name="add">Thêm</string>
    <string name="delete">Xóa</string>
    <string name="input_specialize">Nhập số chỉ định</string>
    <string name="cancel">Từ bỏ</string>
    <string name="add_success">Thêm thành công</string>
    <string name="delete_fail">Xóa không thành công</string>
</resources>
