<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Title start-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@color/colorRed500"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_title" />
    </LinearLayout>
    <!--Title end-->

    <!--Container start-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:background="@color/colorRed300">

        <!--Frame start-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/frame_margin"
            android:background="@android:color/white"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!--Line start-->
                    <LinearLayout
                        android:id="@+id/btnSpecialize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorAccent"
                        android:paddingTop="@dimen/button_padding"
                        android:paddingBottom="@dimen/button_padding"
                        android:layout_margin="@dimen/button_padding"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/create_specialize"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/text_size_button" />
                    </LinearLayout>
                    <!--Line end-->


                    <!--Line start-->
                    <LinearLayout
                        android:id="@+id/btnNews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorGreen"
                        android:paddingTop="@dimen/button_padding"
                        android:paddingBottom="@dimen/button_padding"
                        android:layout_margin="@dimen/button_padding"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/create_new"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/text_size_button" />
                    </LinearLayout>
                    <!--Line end-->

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <!--Frame end-->
    </LinearLayout>
    <!--Container end-->
</LinearLayout>