<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Title start-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@color/colorRed500"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_title" />
    </LinearLayout>
    <!--Title end-->

    <!--Container start-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:background="@color/colorRed300">

        <!--Frame start-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/frame_margin"
            android:background="@android:color/white"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.85"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/btnAdd"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.15"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/btnAdd"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="@dimen/small_button_margin"
                            android:layout_weight="0.5"
                            android:background="@color/colorGreen"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/add"
                                android:textColor="@android:color/white"
                                android:textSize="@dimen/text_size_button" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/btnDelete"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="@dimen/small_button_margin"
                            android:layout_weight="0.5"
                            android:background="@color/colorAccent"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/delete"
                                android:textColor="@android:color/white"
                                android:textSize="@dimen/text_size_button" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.85"
                        android:gravity="center">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="@dimen/test_area_margin"
                            android:background="@color/colorGray"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:gravity="top|left" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnNext"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.15"
                    android:background="@color/colorBlue900"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/next"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_button" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <!--Frame end-->
    </LinearLayout>
    <!--Container end-->
</LinearLayout>