<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Title start-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@color/colorRed500"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_data"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_title" />
    </LinearLayout>
    <!--Title end-->

    <!--Container start-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:background="@color/colorRed300">

        <!--Frame start-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/frame_margin"
            android:background="@android:color/white"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.85"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!--Line start-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/line_margin_top_bottom"
                        android:layout_marginLeft="@dimen/line_margin_left_right"
                        android:layout_marginRight="@dimen/line_margin_left_right"
                        android:layout_marginTop="@dimen/line_margin_top_bottom"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:gravity="center|right">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="@dimen/text_edit_margin_right"
                                android:text="@string/from"
                                android:textColor="@color/colorRed500"
                                android:textSize="@dimen/text_size_normal" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:gravity="center|left">

                            <EditText
                                android:inputType="number"
                                android:id="@+id/edtFrom"
                                android:text="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/text_size_normal" />
                        </LinearLayout>
                    </LinearLayout>
                    <!--Line end-->


                    <!--Line start-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/line_margin_top_bottom"
                        android:layout_marginLeft="@dimen/line_margin_left_right"
                        android:layout_marginRight="@dimen/line_margin_left_right"
                        android:layout_marginTop="@dimen/line_margin_top_bottom"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:gravity="center|right">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="@dimen/text_edit_margin_right"
                                android:text="@string/to"
                                android:textColor="@color/colorRed500"
                                android:textSize="@dimen/text_size_normal" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:gravity="center|left">

                            <EditText
                                android:inputType="number"
                                android:id="@+id/edtTo"
                                android:text="5"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/text_size_normal" />
                        </LinearLayout>
                    </LinearLayout>
                    <!--Line end-->

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.15"
                android:background="@color/colorBlue900"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_button" />
            </LinearLayout>
        </LinearLayout>
        <!--Frame end-->
    </LinearLayout>
    <!--Container end-->
</LinearLayout>